pages/dkp/kommander/2.1/workspaces/applications/platform-applications/index.md
---
layout: layout.pug
navigationTitle: Workspace Platform Applications
title: Workspace Platform Applications
menuWeight: 30
excerpt: How workspace platform applications work
---

When attaching a cluster, Kommander deploys certain platform applications on the newly attached cluster. Operators can use the Kommander UI to customize which platform applications to deploy to the attached clusters in a given workspace.

The following table describes the list of platform applications that are deployed on attachment.

Currently, the monitoring stack is deployed by default. The logging stack is not.

<!-- # This page not yet updated
Review the [workspace platform service resource requirements](./platform-application-requirements/) to ensure that the attached clusters have sufficient resources.
-->

### Customize a workspace's applications

You can customize the applications that are deployed to a workspace's clusters using the Kommander UI. Access the applications page by going to the specific workspace, then opening the **Applications** page from the sidebar menu.

This takes you to the **Applications** page which displays all applications that can be deployed or uninstalled.

To use the CLI to deploy or uninstall applications, see [Application Deployment](./application-deployment)

<p class="message--important"><strong>IMPORTANT: </strong>There may be dependencies between the applications, which are listed <a href="./platform-application-dependencies/">in the workspace platform application dependencies</a> documentation. Review them carefully prior to customizing to ensure that the applications are deployed successfully.</p>

## Workspace platform applications

| Common Name           | APP NAME                      | APP ID                | Deployed by default |
|-----------------------| ----------------------------- | --------------------- | ------------------- |
| Cert Manager          | cert-manager-0.2.7            | cert-manager          | True                |
| External DNS          | external-dns-2.20.5           | external-dns          | False               |
| Fluent Bit            | fluent-bit-0.16.2             | fluent-bit            | False               |
| Gatekeeper            | gatekeeper-0.6.8              | gatekeeper            | False               |
| Grafana               | grafana-logging-6.16.4        | grafana-logging       | False               |
| Loki                  | grafana-loki-0.33.1           | grafana-loki          | False               |
| Istio                 | istio-1.9.1                   | istio                 | False               |
| Jaeger                | jaeger-2.21.0                 | jaeger                | False               |
| Kiali                 | kiali-1.29.1                  | kiali                 | False               |
| Kube OIDC Proxy       | kube-oidc-proxy-0.2.5         | kube-oidc-proxy       | True                |
| Kube Prometheus Stack | kube-prometheus-stack-18.1.1  | kube-prometheus-stack | True                |
| Kubecost              | kubecost-0.20.2               | kubecost              | True                |
| Kubernetes Dashboard  | kubernetes-dashboard-5.0.2    | kubernetes-dashboard  | True                |
| Logging Operator      | logging-operator-3.15.0       | logging-operator      | False               |
| Metal LB              | metallb-0.12.2                | metallb               | False               |
| Minio                 | minio-operator-4.1.7          | minio-operator        | False               |
| Nvidia                | nvidia-0.4.3                  | nvidia                | False               |
| Prometheus Adapter    | prometheus-adapter-2.11.1     | prometheus-adapter    | True                |
| Reloader              | reloader-0.0.99               | reloader              | True                |
| Traefik               | traefik-10.3.0                | traefik               | True                |
| Traefik ForwardAuth   | traefik-forward-auth-0.3.2    | traefik-forward-auth  | True                |
| Velero                | velero-3.1.3                  | velero                | False               |

<p class="message--note"><strong>NOTE: </strong>Currently, Kommander only supports a single deployment of <code>cert-manager</code> per cluster. Because of this, <code>cert-manager</code> cannot be installed on <code>Konvoy</code> managed <code>AWS</code> clusters.</p>

<p class="message--note"><strong>NOTE: </strong>Only a single deployment of <code>traefik</code> per cluster is supported.</p>

<p class="message--note"><strong>NOTE: </strong>Kommander automatically manages the deployment of <code>traefik-forward-auth</code> and <code>kube-oidc-proxy</code> when clusters are attached to the workspace. These applications are not shown in the Kommander UI.</p>
